fix word wrap for Badge

--- a/src/components/Badge/styles.css
+++ b/src/components/Badge/styles.css
@@ -8,6 +8,7 @@
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.05em;
+  white-space: nowrap;
 
   &_size {
     &_s {
